# ethanol

./: .gitignore  LICENSE  README.md  pyproject.toml
ethanol/: __main__.py
ethanol/utils/: logger.py  nvml.py
patches/: replace.py
patches/config/wine-tkg-git/: customization.cfg
patches/config/wine-tkg-git/wine-tkg-profiles/: advanced-customization.cfg  wine-tkg-nightmare-staging-ntsync.cfg  wine-tkg-nightmare-staging.cfg  wine-tkg-nightmare.cfg
patches/wine-tkg-git/wine-tkg-scripts/: prepare.sh.patch
